--- a/week 7/startbootstrap-sb-admin-2-gh-pages/index.html
+++ b/week 7/startbootstrap-sb-admin-2-gh-pages/index.html
@@ -112,7 +112,7 @@
     </a>
   </body>
   <script>
-    const APIkey = "Api key";
+    const APIkey = "5f077236";
     const apiUrl = `http://www.omdbapi.com/?plot=full&apikey=${APIkey}&`;
 
     const filmTitle = document.getElementById("filmTitle");
